# Auto-AHK-Switch

./: .deepsource.toml  .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/ahk-switch/: find_ahk.py  main.py  switch_ahk.py
